--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,58 +1,71 @@
 .todoListMain
 {
   height:100%;
-  width:95%;
+  width:100%;
   
 }
-.todoListMain .header
-{
-  margin-left:8%;
+
+.todoListMain .header .fclip
+  {
+  position: absolute;
+  padding:9px;
+  color: yellowgreen;
 }
 .todoListMain .header input
  {
+  font-family: 'Lato', sans-serif;
     padding: 10px;
     font-size: 16px;
-    border: 2px solid rgba(14, 1, 1, 0.767);
-    width: 200px;
+    border: 1px solid  lightgray;
+    width: 150px;
+    border-radius: 5px;
+    padding-left: 36px;
+    margin-right: 1px;
     
   }
+  
+
+  .todoListMain .header input:focus {
+    border: 1px solid rgb(145, 144, 144); /* some kind of blue border */
+    outline:none;
+    -webkit-box-shadow: 0px 0px 3px rgb(145, 144, 144);
+       -moz-box-shadow: 0px 0px 3px rgb(145, 144, 144);
+            box-shadow: 0px 0px 3px rgb(145, 144, 144); /* some variation of blue for the shadow */
+
+}
   .todoListMain .header button 
   {
     padding: 10px;
     font-size: 16px;
-    margin: 10px;
-    margin-right: 0px;
-    background-color: #0066FF;
+    margin-left: 10px;
+    width:40px;
+    height:40px;
+    border-radius: 5px;
+    background-color:rgb(139, 206, 241);
     color: #FFF;
-    border: 2px solid #0066FF;
+    border: 2px solid rgb(139,206,241);
   }
-  .todoListMain .header button:hover 
+  .todoListMain .header button:enabled 
   {
-    background-color: #003399;
-    border: 2px solid #003399;
+    background-color: rgb(71, 186, 248);
+    border: 2px solid rgb(71, 186, 248);
     cursor: pointer;
+    outline: none;
   }
   
-  .theList 
-  {
-   
-    padding: 2%;
-    
-    text-align: justify;
-    
-   
-  }
+  
   .todoListMain .theList p {
     color: #333;
-    background-color:rgba(255,255,56,.5);
-   overflow: auto;
-    padding: 18px;
-    margin-bottom: 45px;
+    border:1px solid rgb(238,238,238);
+    overflow: auto;
+    background-color: white;
+    margin-top: 40px;
+    font-family: 'Lato', sans-serif;
     border-radius: 5px;
-    width:18%;
-    height:100px;
-    display: inline-block;
-    margin-left: 4%;
+    width:50%;
+    height:40px;
+    padding:0;
+    left: 25%;
     position: relative;
   }
   
@@ -60,35 +73,61 @@
   p .faicons{
    float: right;
    right:6px;
-   top:9px;
+   top:8px;
    font-size: 14px;
-   color:black;
+   color:grey;
    position: absolute;
    cursor: pointer;
+  }
+  p .fedit
+  {
+   
+    top:8px;
+   right:28px;
+   font-size: 14px;
+   color:grey;
+   position: absolute;
+   cursor: pointer;
+   
+  }
+  p .fedit:hover
+  {
+    font-size:16px;
   }
   p .faicons:hover{
     font-size:16px;
   }
-  p textarea{
-   background-color: transparent;
+  p span .date
+  {
+    color: grey;
+    font-size: 12px;
+   right:6px;
+   top:23px;
+   position: absolute;
+   font-family: 'Lato', sans-serif;
+  }
+  p input{
+  
     border:0;
     overflow: hidden;
     resize: none;
     color:black;
-    font-family: 'Bowlby One SC', cursive;
-    font-size: 18px;
-    width:100%;
-    height:97%;
-    word-wrap: break-word;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    margin-left:-4em;
+    width:70%;
+    height: 100%;
+   
+   
   }
-  p textarea:focus{
+  p input:focus{
     outline: none;
   }
   .todoListMain .theList p::-webkit-scrollbar {
     display: none;
-}
-.todoListMain .theList p {
-  -ms-overflow-style: none;
-}
-  
+  }
+  .todoListMain .theList p {
+    -ms-overflow-style: none;
+  }
+    
   
