--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,34 @@
 body {
- 
-  background-color: #FFFAFB;
     text-align: center;
-    font-family: 'Bowlby One SC', cursive;
+    font-family: 'Lato', sans-serif;
     margin:0;
     padding:0;
-    height:100%;
+    background-color: rgb(244,243,243);
+    width: 100%;
 }
 
 .heading
 {
- background-color:black ;
- color:white;
- height:100px;
- padding:30px;
+  
+ color:black;
+ height:auto;
+ font-family: 'Lato', sans-serif;
+ width:50%;
+border: 1px solid rgb(227, 227, 227);
+background-color:white;
+ top:50%;
+ left:50%;
+ margin-top:2%;
+ margin-left: 23%;
+ padding:2%;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 3px lightgray;
+  -moz-box-shadow: 0px 0px 3px lightgray;
+       box-shadow: 0px 0px 3px lightgray;
  
+}
+.heading h3
+{
+  margin-top:1px;
+  font-family: 'Lato';
 }
